# API_FastAPI

./: main.py  project_docs.txt  pyproject.toml
