[project]
name = "python-fast-api"
version = "0.1.0"
description = "create a fast api project with poetry"
authors = [
    {name = "Talharana",email = "mtalharana093@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
